# Pi4-SecurityCamera

./: .gitignore  CMakeLists.txt  README.md  delete_old_files.sh  main.cpp  sample_config.txt
picam/: Picam03_CapturePhoto.cpp  Picam04_RecordVideo.cpp  Picam06_RecordVideoFacedetect_Lite.cpp  Picam13_ReadConfig.cpp  Picam14_ReadAndNotify.cpp  Picam16_SecurityCamera.cpp
